turtleart.housemany.HouseMany.scala.error
Erreur de compilation :
HouseMany:3: error: not found: value x
  forward(x)
          ^HouseMany:5: error: not found: value x
  forward(x)
          ^HouseMany:7: error: not found: value x
  forward(x)
          ^HouseMany:9: error: not found: value x
  forward(x)
          ^HouseMany:12: error: not found: value x
  forward(x)
          ^HouseMany:14: error: not found: value x
  forward(x)
          ^HouseMany:16: error: not found: value x
  forward(x)
          ^HouseMany:18: error: not found: value x
  forward(x)
          ^HouseMany:21: error: not found: value x
  backward(x)
           ^