turtleart.housemany.HouseMany.scala.code
override def run() {
  var w=30
  forward(x)
  right(90)
  forward(x)
  right(90)
  forward(x)
  right(90)
  forward(x)
  right(90)
  
  forward(x)
  right(30)
  forward(x)
  right(120)
  forward(x)
  right(120)
  forward(x)
  right(120)
  left(30)
  backward(x)

}